SOS-2480 Fix alignment of hashtags.

--- a/themes/so-theme/docroot/_diffs/css/_so.scss
+++ b/themes/so-theme/docroot/_diffs/css/_so.scss
@@ -92,6 +92,7 @@ $red: #8F0920;
 	.hashtag {
 		color: #999;
 		padding-right: 0;
+		vertical-align: baseline;
 	}
 
 	.hashtag-link {
